[package]
name = "renderbars"
version = "0.3.1"
authors = ["Ethan D. Twardy <ethan.twardy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.1.2"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
